--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "postinstall": "npx jetify"
+    "postinstall": "npx jetify",
+    "clean-android": "cd ./android && ./gradlew clean",
+    "clean:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && rm -vrf android/app/src/main/res/drawable*",
+    "clean": "rm -rf ./node_modules/ && yarn",
+    "start-reset": "react-native start -- --reset-cache"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.4",
@@ -60,9 +64,9 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
-    "babel-plugin-transform-remove-console": "^6.9.4",
     "jetifier": "^1.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1"
