--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "start-reset": "react-native start -- --reset-cache"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.4",
+    "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.23.0",
     "i18next": "^20.2.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
@@ -33,6 +34,8 @@
     "react-native-camera": "^3.43.8",
     "react-native-chart-kit": "^6.11.0",
     "react-native-dark-mode": "^0.2.2",
+    "react-native-device-info": "^8.4.1",
+    "react-native-dotenv": "^3.2.0",
     "react-native-draggable": "^3.3.0",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.3",
@@ -53,6 +56,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
