--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.64.1",
     "react-native-action-button": "^2.8.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-calendars": "^1.1263.0",
     "react-native-camera": "^3.43.8",
     "react-native-chart-kit": "^6.11.0",
